add JWT and authorize
